# MUQ-Example

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
analyis/: AnalysePerformance.py  PlotDensity.py  PlotHistory.py  plot_density.py
data/: GenerateTrueSolution.py
src/: ComponentFactory.cpp  ComponentFactory.h  Interpolation.cpp  ODEModel.cpp  ODEModel.h  ODESolver.cpp  SamplingProblem.cpp  SamplingProblem.h  generate_true_solution.py  gmh.cpp  likelihood.cpp  likelihood.h  main.cpp  parallel.cpp
src/MPI/: MPIHelpers.cpp  MPIHelpers.h
src/ODEModel/: Function.h  LikelihoodEstimator.cpp  LikelihoodEstimator.h  ODEPiece.cpp  ODEPiece.h  ODESolver.cpp  ODESolver.h  main.cpp
src/UQ/: MIComponentFactory.cpp  MIComponentFactory.h  MIInterpolation.cpp  MIInterpolation.h  ParallelMIComponentFactory.cpp  ParallelMIComponentFactory.h  SamplingProblem.cpp  SamplingProblem.h  StaticLoadBalancer.cpp  StaticLoadBalancer.h  ValuesAndVariances.h
tests/ODEModel/: LikelihoodEstimator.cpp
